<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfood.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.example.myfood.ui.gallery.DailyMealFragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/daily_meal_fragment" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.example.myfood.ui.slideshow.FavFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_fav" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.myfood.ui.MyCartFragment"
        android:label="fragment_my_cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>